<resources>
    <string name="app_name">random_project</string>
    <string name="button_01">testar</string>
    <string name="Som">Som</string>
    <string name="EntradaDeTeclado">Digite ola</string>
    <string name="text_confirm">Confirmado!</string>
    <string name="proxima_tela">Proxima Tela</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="AdicionarAoArraylist">Adicionar ao arraylist</string>
    <string name="adicionar">Adicionar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Configuracao">Settings</string>
    <string name="title_activity_main5">MainActivity5</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>