<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Som"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/togglebutton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtInput"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EntradaDeTeclado"
                android:inputType="textPersonName"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnClique01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickButton01"
                android:text="@string/button_01" />

            <TextView
                android:id="@+id/text_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="   Confirmado."
                android:textSize="18sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtinput_arraylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/AdicionarAoArraylist"
                android:inputType="textPersonName"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_in_arraylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtnArraylist"
                android:text="@string/adicionar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/lista_nomes"
                android:layout_width="229dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_prox_tela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtnProximaTela"
                android:text="@string/proxima_tela" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>